# convex-hull-algorithms

./: CMakeLists.txt  main.cpp
algorithms/: andrew_algorithm.cpp  andrew_algorithm.h  convex_hull_algorithm.cpp  convex_hull_algorithm.h  mock.cpp  mock.h  quickhull.cpp  quickhull.h
core/: stopwatch.cpp  stopwatch.h  types.cpp  types.h
generators/: circle_generator.cpp  circle_generator.h  line_generator.cpp  line_generator.h  point_generator.cpp  point_generator.h  random_generator.cpp  random_generator.h  square_generator.cpp  square_generator.h
visualizer/: app.cpp  app.h  renderer.cpp  renderer.h
